helm/sscp-test/istio/boss.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: boss-gw
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "boss.pcidata.com"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: boss-vs
spec:
  hosts:
  - "boss.pcidata.com"
  gateways:
  - boss-gw
  http:
  - match:
    route:
    - destination:
        port:
          number: 9100
        host: sscp-page-management-svc
