helm/sscp-test/istio/k8s-dashboard.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: k8s-dashboard-gw
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    hosts:
    - "dashboard.pcidata.com"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: k8s-dashboard-vs
spec:
  hosts:
  - "dashboard.pcidata.com"
  gateways:
  - k8s-dashboard-gw
  http:
  - match:
    route:
    - destination:
        port:
          number: 443
        host: kubernetes-dashboard
