helm/sscp-test/istio/page-vi.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: boss-vs
spec:
  hosts:
  - "boss.pcidata.com"
  gateways:
  - boss-gw
  http:
  - match:
    route:
    - destination:
        port:
          number: 9100
        host: sscp-page-management-svc
