helm/sscp-test/istio/test.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: test-gw
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "test.pcidata.com"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: test-vs
spec:
  hosts:
  - "test.pcidata.com"
  gateways:
  - test-gw
  http:
  - match:
    route:
    - destination:
        port:
          number: 9101
        host: sscp-page-test-svc
